<resources>
    <string name="app_name">Course Registration Wait List</string>
    <string name="action_settings">Settings</string>
    <string name="activityTitle">Wait List</string>
    <string name="msgNoStudents">No students on wait list!</string>
    <string name="newStudentTitle">New student entry</string>
    <string name="editStudentTitle">Edit student</string>
    <string name="hintEnterStudent">First and last name</string>
    <string name="hintEnterPriority">Graduate, 4th year, 3rd year, 2nd year, 1st year</string>
    <string name="priority_level">Priority Level:</string>
    <string name="student_name">Student name:</string>
    <string name="student_id">Student ID:</string>
    <string name="hintEnterID">ID number</string>
    <string name="student_bday">Student date of birth:</string>
    <string name="hintEnterBday">mm/yy/dddd</string>
    <string name="student_email">Student email:</string>
    <string name="hintEnterEmail">studentemail@montclair.edu</string>
</resources>
